syntax = "proto3";

package cosmos.app.runtime.v1alpha1;

import "cosmos/app/v1alpha1/module.proto";

message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/cosmos/cosmos-sdk/runtime"
    use_package: {name: "cosmos.app.v1alpha1"}
  };

  string app_name = 1;
  repeated string begin_blockers = 2;
  repeated string end_blockers = 3;
  repeated string init_genesis = 4;
}